--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
+altgraph==0.17.4
+certifi==2025.10.5
+charset-normalizer==3.4.3
+idna==3.10
+macholib==1.16.3
+packaging==25.0
+pyinstaller==6.16.0
+pyinstaller-hooks-contrib==2025.9
 pynput==1.8.1
 pyobjc-core==11.1
 pyobjc-framework-ApplicationServices==11.1
 pyobjc-framework-Cocoa==11.1
 pyobjc-framework-CoreText==11.1
 pyobjc-framework-Quartz==11.1
+python-dotenv==1.1.1
+requests==2.32.5
+setuptools==80.9.0
 six==1.17.0
+urllib3==2.5.0
